# dotfiles

./: .Xdefaults  .Xresources  .config  .editorconfig  .fluxbox  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mint-fm2  .nanorc  .wgetrc  .xcolours  .xinitrc  .xsession  .zshrc  20-gpudriver.conf  CC-SA-4.0  GPL-2.0  README  README.md  debug_slash.sh  debug_test.sh  install-mappings.yml  issue  status.sh
.config/chromium/: Local State  Safe Browsing Bloom Filter 2  Safe Browsing Download  SingletonCookie  SingletonLock  SingletonSocket
.config/chromium/Default/: Bookmarks  Cookies  Current Session  Current Tabs  Favicons  Favicons-journal  History  History Index 2011-06-journal  History-journal  Last Session  Last Tabs  Login Data  Login Data-journal  Preferences  Top Sites  TransportSecurity  Visited Links  Web Data  Web Data-journal
.config/emesene2/: config
.config/gtk-2.0/: gtkfilechooser.ini
.config/gtk-3.0/: settings.ini
.config/libfm/: libfm.conf
.config/lxterminal/: lxterminal.conf
.config/nitrogen/: bg-saved.cfg  nitrogen.cfg
.config/openbox/: rc.xml
.config/pcmanfm/default/: pcmanfm.conf
.config/wmfs/: wmfsrc
.fluxbox/: fbrun_history  init  log  menu  startup  startup.sh
.githooks/: post-checkout  post-checkout.ps1  post-commit  post-commit.ps1  post-merge  post-merge.ps1  pre-commit  pre-commit.ps1  pre-commit.sh  pre-push  pre-push.ps1
.github/scripts/: check-english.ps1  check-english.py  check-english.sh  check-mappings.ps1  check-mappings.py  check-mappings.sh  e2e-compare.ps1  e2e-compare.sh  test-install-mappings.ps1  test-install-mappings.sh  test_install.py  test_sanitize.py
.github/workflows/: ci.yml
.icewm/: menu  preferences  shutdown  startup  startup.sh  sutdown.sh  theme  toolbar  winoptions
.icewm/themes/: preferences
.icewm/themes/BluBuntu/: closeA.xpm  closeO.xpm  frameATL.xpm  frameATR.xpm  maximizeA.xpm  maximizeO.xpm  menuButtonA.xpm  menusel.xpm  minimizeA.xpm  minimizeO.xpm  restoreA.xpm  restoreO.xpm  titleAB.xpm
.icewm/themes/DreamOS/: _ABOUT_  closeI.xpm  default.theme  maximizeA.xpm  maximizeI.xpm  menuButtonA.xpm  menuButtonI.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  (+1 more)
.mint-fm2/: currentList  iconMint.db  iconPix.db  iconSys.db  iconUser.db  mint-fm2.conf
.mint-fm2/submenus/: Accessories  Categories  DesktopSettings  Development  Graphics  Internet  System
.scripts/: Reiniciar  Salir
.xcolours/: neon
L420/Lenovo Thinkpad L420 78294LS/: dsdt.dsl
L420/etc/: thinkfan.conf
L420/home/: .Xresources  .bashrc  .inputrc  .lesskey  .nanorc  .profile  .tmux.conf  .twmrc  .xinitrc
Poni/: README.md
Toshiba/Toshiba Satellite C845D-SP4327SL/: dsdt.dsl
Toshiba/etc/: sysctl.conf
Toshiba/poni/: alicorn.xcf  maybelle.xcf
assets/poni/: ATTRIBUTIONS.md  README.md  alicorn.xcf  maybelle.xcf
backup/: .Xresources  .bashrc  .bashrc-root  .bashrc-user  .conkyrc  .cshrc  .mkshrc  .nanorc  .toprc  .twmrc  .zshrc  terminalrc
backup/.xcolours/: colors  marzo
docs/: CI.md  CONTRIBUTING.md  FONTS.md  GIT-READY.md  INSTALL.md  README.md  STRUCTURE.md  WAYBAR_START_MENU.md
etc/: issue  nanorc
etc/modprobe.d/: modprobe.conf  sound_persistent.conf
etc/modules-load.d/: modules.conf
etc/udev.d/: 01-touchpad.rules
home/user/: .Xresources  .bashrc  .macmenu-tslist  .makepkg.conf  .nanorc  .zshrc
machines/: README.md
modules/browsers/: README.md
modules/cargo/: config
modules/dev-tools/python/: README.md  pyproject.toml
modules/git/: .git-credentials  .gitconfig  .gitignore
modules/lazygit/: config.yml
modules/pacman/: fortran.conf  makepkg.conf  rust.conf
modules/ssh/: config.example
modules/tmux/: .tmux.conf
poni/: blossomforth_desktop_pony_by_beckiergb-d4naf0m.gif~
scripts/: check-braces.ps1  fix-eol.ps1  fix-eol.sh  gen_attributions.ps1  inspect_mappings.ps1  inspect_mappings.sh  install.ps1  install.py  install.sh  restore-backup.ps1  restore-backup.sh  setup-githooks.ps1  setup-githooks.sh  update-submodules.ps1  update-submodules.sh
scripts/dotfiles_installer/: __init__.py  attributes.py  backup.py  config.py  fonts.py  githooks.py  gitlfs.py  inspect.py  mapper.py  pkgmgr.py  sanitize.py  submodules.py  symlink.py
(+503 files in other folders)
